external-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  type: ExternalName
  externalName: frontend-service.frontend.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: default
spec:
  type: ExternalName
  externalName: auth-service.auth.svc.cluster.local
---
apiVersion: v1
kind: Service
metadata:
  name: todos-service
  namespace: default
spec:
  type: ExternalName
  externalName: todos-service.todos.svc.cluster.local
