todos-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos
  template:
    metadata:
      labels:
        app: todos
    spec:
      containers:
      - name: todos
        image: lauravrv/todos-app:v1
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: todos-service
spec:
  selector:
    app: todos
  ports:
  - port: 8082
    targetPort: 8082
